[gd_scene load_steps=38 format=3 uid="uid://bd24oc54elotu"]

[ext_resource type="Material" uid="uid://bmgyfioow48f8" path="res://shader/unshadedlight.tres" id="1_xyjkw"]
[ext_resource type="Script" path="res://Script/BossBatEnemy/boss_bat.gd" id="2_ympke"]
[ext_resource type="Texture2D" uid="uid://ddjogmwtkrlb8" path="res://bosshealthunder.png" id="3_pctn6"]
[ext_resource type="Texture2D" uid="uid://ba6320noj0j2n" path="res://bosshealthover.png" id="4_1p8oj"]
[ext_resource type="Script" path="res://Script/BossBatEnemy/bat_state_controller.gd" id="4_25j3u"]
[ext_resource type="Script" path="res://Scenes/Hitbox Component.gd" id="5_s5xi1"]
[ext_resource type="Texture2D" uid="uid://boijh8vbuie55" path="res://art/Enemies/Bossbat-Sheet.png" id="6_8r4q4"]
[ext_resource type="Script" path="res://Scenes/EnemyHealth.gd" id="6_im028"]
[ext_resource type="Script" path="res://gpu_particles.gd" id="7_75kkb"]
[ext_resource type="AudioStream" uid="uid://kupcp0jcvv8" path="res://music/sfx/BossBatROAR.mp3" id="8_oufed"]
[ext_resource type="Script" path="res://Scenes/ChargeState.gd" id="8_qkxlu"]
[ext_resource type="AudioStream" uid="uid://c4lodblowvhwe" path="res://music/zombiesound-171653.mp3" id="9_o5t5g"]
[ext_resource type="Script" path="res://Scenes/SleepState.gd" id="10_5kyio"]
[ext_resource type="Script" path="res://Script/BossBatEnemy/hurtbox_components.gd" id="10_8h1lu"]
[ext_resource type="Script" path="res://Script/BossBatEnemy/ShootState.gd" id="10_sxcg1"]
[ext_resource type="Script" path="res://Scenes/boss_bat_state_machine.gd" id="11_0chcn"]
[ext_resource type="Script" path="res://Scenes/Velocity Component.gd" id="12_2wgx0"]
[ext_resource type="Script" path="res://Script/BossBatEnemy/FlyingState.gd" id="13_31c35"]
[ext_resource type="Script" path="res://Script/object_pooling.gd" id="15_p2d7w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ihdgj"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="Animation" id="Animation_vsm7r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_vj02s"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 1, 0.6), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ircwb"]
_data = {
"RESET": SubResource("Animation_vsm7r"),
"attack": SubResource("Animation_vj02s")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_gpsja"]
radius = 46.0109

[sub_resource type="AtlasTexture" id="AtlasTexture_ljwux"]
atlas = ExtResource("6_8r4q4")
region = Rect2(800, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4phs"]
atlas = ExtResource("6_8r4q4")
region = Rect2(0, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_3235m"]
atlas = ExtResource("6_8r4q4")
region = Rect2(200, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_706jq"]
atlas = ExtResource("6_8r4q4")
region = Rect2(400, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_qw65g"]
atlas = ExtResource("6_8r4q4")
region = Rect2(600, 0, 200, 200)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xami"]
atlas = ExtResource("6_8r4q4")
region = Rect2(800, 0, 200, 200)

[sub_resource type="SpriteFrames" id="SpriteFrames_h0w82"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljwux")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4phs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3235m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_706jq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qw65g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xami")
}],
"loop": true,
"name": &"flying",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_w7a0g"]
radius = 409.207

[sub_resource type="CircleShape2D" id="CircleShape2D_ye3w1"]
radius = 72.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ivd0l"]
radius = 71.0

[sub_resource type="Gradient" id="Gradient_dxp58"]
offsets = PackedFloat32Array(0.00359066, 1)
colors = PackedColorArray(0, 1, 0, 1, 0.313726, 0.639216, 0.0666667, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_q1v7q"]
gradient = SubResource("Gradient_dxp58")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_dbuit"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 200.0
initial_velocity_max = 600.0
gravity = Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12)
scale_max = 6.0
color_ramp = SubResource("GradientTexture1D_q1v7q")

[node name="enemy" type="CharacterBody2D" node_paths=PackedStringArray("health_component", "hurtbox_component", "animatedsprite") groups=["Enemy"]]
z_index = 250
material = ExtResource("1_xyjkw")
collision_layer = 128
collision_mask = 129
script = ExtResource("2_ympke")
health_component = NodePath("Health Components")
hurtbox_component = NodePath("Hurtbox Components")
animatedsprite = NodePath("AnimatedSprite2D")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_ihdgj")

[node name="ProgressBar" type="TextureProgressBar" parent="CanvasLayer/PanelContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
max_value = 500.0
value = 500.0
texture_under = ExtResource("3_pctn6")
texture_progress = ExtResource("4_1p8oj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite2D")
libraries = {
"": SubResource("AnimationLibrary_ircwb")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_gpsja")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = ExtResource("1_xyjkw")
sprite_frames = SubResource("SpriteFrames_h0w82")
animation = &"attack"

[node name="Health Components" type="Node" parent="." node_paths=PackedStringArray("CharacterBody")]
script = ExtResource("6_im028")
health_max = 350
CharacterBody = NodePath("..")

[node name="Entity Detector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entity Detector"]
position = Vector2(2, -34)
shape = SubResource("CircleShape2D_w7a0g")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 2
script = ExtResource("5_s5xi1")
damage = 40
is_entity = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_ye3w1")
debug_color = Color(7.78936e-08, 0.622474, 0.545783, 0.42)

[node name="Hurtbox Components" type="Area2D" parent="." node_paths=PackedStringArray("health_components", "gpu_particles_2d")]
unique_name_in_owner = true
collision_layer = 128
collision_mask = 16
script = ExtResource("10_8h1lu")
health_components = NodePath("../Health Components")
gpu_particles_2d = NodePath("GPUParticles2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox Components"]
shape = SubResource("CircleShape2D_ivd0l")
debug_color = Color(1, 0, 0.27451, 0.419608)

[node name="GPUParticles2D" type="GPUParticles2D" parent="Hurtbox Components"]
position = Vector2(0, -15)
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_dbuit")
lifetime = 0.2
one_shot = true
explosiveness = 1.0
randomness = 1.0
script = ExtResource("7_75kkb")

[node name="StateController" type="Node" parent="." node_paths=PackedStringArray("machine")]
script = ExtResource("4_25j3u")
machine = NodePath("../BossBatFSM")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_oufed")

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_o5t5g")

[node name="BossBatFSM" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("11_0chcn")

[node name="ChargeState" type="Node" parent="BossBatFSM" node_paths=PackedStringArray("animator", "animation", "velocity_component", "raycast")]
script = ExtResource("8_qkxlu")
animator = NodePath("../../AnimatedSprite2D")
animation = NodePath("../../AnimationPlayer")
velocity_component = NodePath("../../Velocity Component")
raycast = NodePath("../../raycast")

[node name="FlyingState" type="Node" parent="BossBatFSM" node_paths=PackedStringArray("animatedSprite", "flyingtimer")]
script = ExtResource("13_31c35")
animatedSprite = NodePath("../../AnimatedSprite2D")
flyingtimer = NodePath("../../flyingtimer")

[node name="ShootState" type="Node" parent="BossBatFSM" node_paths=PackedStringArray("animatedSprite", "animation")]
script = ExtResource("10_sxcg1")
animatedSprite = NodePath("../../AnimatedSprite2D")
animation = NodePath("../../AnimationPlayer")

[node name="SleepState" type="Node" parent="BossBatFSM"]
script = ExtResource("10_5kyio")

[node name="Rotater" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="flyingtimer" type="Timer" parent="."]
wait_time = 0.4

[node name="shoottimer" type="Timer" parent="."]
unique_name_in_owner = true
process_callback = 0

[node name="RandomTimer" type="Timer" parent="."]
wait_time = 2.5

[node name="raycast" type="RayCast2D" parent="."]
collision_mask = 3

[node name="Velocity Component" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("12_2wgx0")
max_speed = 100.0
speed = 2000.0
acceleration = 50.0

[node name="Object Pool" type="Node" parent="."]
script = ExtResource("15_p2d7w")

[connection signal="died" from="Health Components" to="." method="_on_health_components_died"]
[connection signal="took_damage" from="Health Components" to="." method="_on_health_components_took_damage"]
[connection signal="body_entered" from="Entity Detector" to="StateController" method="_on_entity_detector_body_entered"]
[connection signal="timeout" from="flyingtimer" to="BossBatFSM/FlyingState" method="_on_timer_timeout"]
[connection signal="timeout" from="shoottimer" to="BossBatFSM/ShootState" method="_on_shoottimer_timeout"]
[connection signal="timeout" from="RandomTimer" to="StateController" method="_on_random_timer_timeout"]
