[gd_scene load_steps=31 format=3 uid="uid://bd24oc54elotu"]

[ext_resource type="Material" uid="uid://bmgyfioow48f8" path="res://shader/unshadedlight.tres" id="1_xyjkw"]
[ext_resource type="Texture2D" uid="uid://bimimoyypq3y6" path="res://art/Enemies/angrybat.png" id="2_dpcnj"]
[ext_resource type="Texture2D" uid="uid://6n18s5g4xpe5" path="res://art/Enemies/angrybat1.png" id="2_i071o"]
[ext_resource type="Script" path="res://Script/BossBatEnemy/boss_bat.gd" id="2_ympke"]
[ext_resource type="Texture2D" uid="uid://c7g1ua0jd6ccd" path="res://art/Enemies/Bossbat-Sheet.png" id="3_2ewxv"]
[ext_resource type="Script" path="res://Script/BossBatEnemy/bat_state_controller.gd" id="4_25j3u"]
[ext_resource type="Texture2D" uid="uid://bppqo37bl7ki7" path="res://art/Enemies/angrybat2.png" id="4_bv8yu"]
[ext_resource type="Texture2D" uid="uid://nl4gavibgde8" path="res://art/Enemies/hurtbossbat.png" id="6_iyqgw"]
[ext_resource type="Script" path="res://Script/BossBatEnemy/health_components.gd" id="9_cumit"]
[ext_resource type="Script" path="res://Script/BossBatEnemy/hurtbox_components.gd" id="10_8h1lu"]
[ext_resource type="Script" path="res://Scenes/boss_bat_state_machine.gd" id="11_0chcn"]
[ext_resource type="Script" path="res://Script/BossBatEnemy/IdleState.gd" id="12_f8g8u"]
[ext_resource type="Script" path="res://Script/BossBatEnemy/FlyingState.gd" id="13_31c35"]
[ext_resource type="Script" path="res://Script/BossBatEnemy/AttackState.gd" id="14_8x6gf"]

[sub_resource type="Animation" id="Animation_vsm7r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_vj02s"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 1, 0.6), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ircwb"]
_data = {
"RESET": SubResource("Animation_vsm7r"),
"attack": SubResource("Animation_vj02s")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_gpsja"]
radius = 30.25

[sub_resource type="AtlasTexture" id="AtlasTexture_0gh80"]
atlas = ExtResource("2_i071o")
region = Rect2(0, 0, 200, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6mia"]
atlas = ExtResource("2_dpcnj")
region = Rect2(0, 0, 200, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_le5v8"]
atlas = ExtResource("4_bv8yu")
region = Rect2(0, 0, 200, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mcwiw"]
atlas = ExtResource("3_2ewxv")
region = Rect2(0, 0, 200, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dynrb"]
atlas = ExtResource("3_2ewxv")
region = Rect2(200, 0, 200, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgh31"]
atlas = ExtResource("3_2ewxv")
region = Rect2(400, 0, 200, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_686x0"]
atlas = ExtResource("3_2ewxv")
region = Rect2(600, 0, 200, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ps7al"]
atlas = ExtResource("3_2ewxv")
region = Rect2(800, 0, 200, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3lli"]
atlas = ExtResource("6_iyqgw")
region = Rect2(0, 0, 200, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_h0w82"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gh80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6mia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_le5v8")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mcwiw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dynrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tgh31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_686x0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ps7al")
}],
"loop": true,
"name": &"flying",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3lli")
}],
"loop": false,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_w7a0g"]
radius = 409.207

[sub_resource type="CircleShape2D" id="CircleShape2D_ivd0l"]
radius = 32.0

[node name="enemy" type="CharacterBody2D" node_paths=PackedStringArray("health", "hurtbox", "animatedsprite") groups=["enemies"]]
z_index = 250
material = ExtResource("1_xyjkw")
position = Vector2(-3, 21)
collision_layer = 128
collision_mask = 3
script = ExtResource("2_ympke")
health = NodePath("Health Components")
hurtbox = NodePath("Hurtbox Components")
animatedsprite = NodePath("AnimatedSprite2D")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite2D")
libraries = {
"": SubResource("AnimationLibrary_ircwb")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, -22)
shape = SubResource("CircleShape2D_gpsja")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = ExtResource("1_xyjkw")
position = Vector2(8, -49)
sprite_frames = SubResource("SpriteFrames_h0w82")
animation = &"attack"

[node name="Controller" type="Node" parent="." node_paths=PackedStringArray("machine")]
script = ExtResource("4_25j3u")
machine = NodePath("../BossBatFSM")

[node name="Health Components" type="Node" parent="." node_paths=PackedStringArray("CharacterBody")]
script = ExtResource("9_cumit")
healthMax = 800
CharacterBody = NodePath("..")

[node name="DogDetector" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DogDetector"]
position = Vector2(2, -34)
shape = SubResource("CircleShape2D_w7a0g")

[node name="Hurtbox Components" type="Area2D" parent="." node_paths=PackedStringArray("health_components")]
unique_name_in_owner = true
collision_layer = 4
collision_mask = 19
script = ExtResource("10_8h1lu")
health_components = NodePath("../Health Components")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox Components"]
position = Vector2(5, -22)
shape = SubResource("CircleShape2D_ivd0l")
debug_color = Color(1, 0, 0.27451, 0.419608)

[node name="BossBatFSM" type="Node" parent="." node_paths=PackedStringArray("bossbat")]
unique_name_in_owner = true
script = ExtResource("11_0chcn")
bossbat = NodePath("..")

[node name="IdleState" type="Node" parent="BossBatFSM" node_paths=PackedStringArray("animatedSprite")]
script = ExtResource("12_f8g8u")
animatedSprite = NodePath("../../AnimatedSprite2D")

[node name="FlyingState" type="Node" parent="BossBatFSM" node_paths=PackedStringArray("animatedSprite", "flyingtimer")]
script = ExtResource("13_31c35")
animatedSprite = NodePath("../../AnimatedSprite2D")
flyingtimer = NodePath("../../flyingtimer")

[node name="AttackState" type="Node" parent="BossBatFSM" node_paths=PackedStringArray("animatedSprite", "animation")]
script = ExtResource("14_8x6gf")
animatedSprite = NodePath("../../AnimatedSprite2D")
animation = NodePath("../../AnimationPlayer")
speed = 400

[node name="Rotater" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(1, -27)

[node name="flyingtimer" type="Timer" parent="."]
wait_time = 0.4

[node name="shoottimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="RandomTimer" type="Timer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -41.0
offset_top = -86.0
offset_right = 47.0
offset_bottom = -59.0
max_value = 500.0
value = 500.0
show_percentage = false

[connection signal="died" from="Health Components" to="." method="_on_health_components_died"]
[connection signal="tookDamage" from="Health Components" to="." method="_on_health_components_took_damage"]
[connection signal="body_entered" from="DogDetector" to="Controller" method="_on_dog_detector_body_entered"]
[connection signal="body_exited" from="DogDetector" to="Controller" method="_on_dog_detector_body_exited"]
[connection signal="body_entered" from="Hurtbox Components" to="Hurtbox Components" method="on_bullet_collisions"]
[connection signal="timeout" from="flyingtimer" to="BossBatFSM/FlyingState" method="_on_timer_timeout"]
[connection signal="timeout" from="shoottimer" to="BossBatFSM/AttackState" method="_on_shoottimer_timeout"]
[connection signal="timeout" from="RandomTimer" to="Controller" method="_on_random_timer_timeout"]
